<resources>
    <string name="app_name">Pet Shop</string>
    <string name="escolha_qual_cachorro_deseja">Escolha qual cachorro deseja:</string>
    <string name="border_collie_r_800_00">Border Collie R$ 800,00</string>
    <string name="pitbull_r_750_00">PitBull R$ 750,00</string>
    <string name="pastor_alem_o_r_700_00">Pastor Alemão R$700,00</string>
    <string name="pastor_canadense_r_800_00">Pastor Canadense R$ 800,00</string>
    <string name="f_mea">Fêmea</string>
    <string name="adestrado">Adestrado</string>
    <string name="com_todas_as_vacinas_em_dia">Com todas as vacinas em dia</string>
    <string name="calcular">Calcular</string>
    <string name="r_00_00">R$ 00,00</string>
    <string name="language">pt</string>
    <string name="pais">BR</string>
</resources>
