<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/escolha_qual_cachorro_deseja"
        android:textSize="19sp"
        android:textColor="@color/colorAccent"
        android:paddingBottom="16dp"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rdgCachorro"
        android:paddingBottom="16dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:id="@+id/rdbBorder"
            android:text="@string/border_collie_r_800_00" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbPitBull"
            android:text="@string/pitbull_r_750_00" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbPastorAl"
            android:text="@string/pastor_alem_o_r_700_00" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rdbPastorCan"
            android:text="@string/pastor_canadense_r_800_00" />

    </RadioGroup>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkFemea"
        android:text="@string/f_mea"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chkAdestrado"
        android:text="@string/adestrado"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:id="@+id/chkVacina"
        android:text="@string/com_todas_as_vacinas_em_dia"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:id="@+id/btCalcular"
        android:onClick="calcular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/txtResultado"
        android:textSize="50sp"
        android:paddingTop="20dp"
        android:text="@string/r_00_00"/>
</LinearLayout>

